--- a/watchlist.html
+++ b/watchlist.html
@@ -23,7 +23,7 @@
         </nav>
     </header>
     <main>
-        <div class="start-exploring">
+        <div class="start-exploring" id="start-exploring">
             <h2>Your watchlist is looking a little empty...</h2>
             <div class="add-movies">
                 <i class="fa-solid fa-circle-plus"></i>
